# ffspot

./: .gitignore  Cargo.toml  README.md  TODO.md  flake.nix  shell.nix
src/: cli.rs  config.rs  config.toml  download.rs  main.rs  resolve.rs  template.rs
