[package]
name = "ffspot"
description = "Download music from Spotify"
version = "0.2.0"
edition = "2021"

[profile.release]
strip = "debuginfo"

[dependencies]
librespot = { git = "https://github.com/librespot-org/librespot", rev = "8e43c3f097131f9dbcb117006160945be29d4b29", default_features = false }
indicatif = "0.17"
color-eyre = { version = "0.6", default-features = false, features = ["track-caller"]}
tokio = "1"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.7", default-features = false, features = ["parse"] }
clap = { version = "4.3", default-features = false, features = [
    "suggestions",
    "color",
    "std",
    "help",
    "usage",
    "derive",
] }
regex = "1.8"
owo-colors = { version = "3.5", features = ["supports-colors"] }
tracing-appender = "0.2"
tracing-subscriber = "0.3"
tracing = "0.1"
which = "4.4"
async-tempfile = "0.4"
