[package]
name = "ffspot"
description = "Download music from Spotify"
version = "0.3.0"
edition = "2021"

[profile.release]
strip = "debuginfo"

[dependencies]
librespot = { git = "https://github.com/librespot-org/librespot", rev = "f5a46c61d2a1a96120516cee26cd7e4b95c20f50", default_features = false }
indicatif = "0.17"
color-eyre = { version = "0.6", default-features = false, features = ["track-caller"]}
tokio = "1"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
clap = { version = "4.3", default-features = false, features = [
    "suggestions",
    "color",
    "std",
    "help",
    "usage",
    "derive",
] }
regex = "1.8"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
tracing = "0.1"
which = "6.0"
async-tempfile = "0.5"
colored = "2.1"
